# otf2_cli_profile

./: .clang-format  AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/: FindCube.cmake  FindCubelib.cmake  FindOTF.cmake  FindOTF2.cmake  FindRapidJson.cmake  Findrapidjson.cmake
include/: all_data.h  data_tree.h  definitions.h  main_structs.h  otf-profiler-config.h.in  otf-profiler.h  reduce_data.h  utils.h
include/output/: create_csv.h  create_cube.h  create_dot.h  create_json.h  data_out.h  data_output.h  dot_writer.h
include/reader/: OTF2Reader.h  OTFReader.h  jsonreader.h  tracereader.h
include/reader/otf2xx/: attribute_list.hpp  attribute_value.hpp  common.hpp  exception.hpp  fwd.hpp  intrusive_ptr.hpp  otf2.hpp  reference.hpp  reference_generator.hpp  registry.hpp  tmp.hpp
include/reader/otf2xx/chrono/: chrono.hpp  clock.hpp  convert.hpp  duration.hpp  ticks.hpp  time_point.hpp
include/reader/otf2xx/definition/: attribute.hpp  call_path.hpp  call_path_parameter.hpp  calling_context.hpp  cart_coordinate.hpp  cart_dimension.hpp  cart_topology.hpp  clock_properties.hpp  comm.hpp  compare.hpp  container.hpp  definitions.hpp  fwd.hpp  group.hpp  inter_comm.hpp  interrupt_generator.hpp  io_directory.hpp  io_file.hpp  io_handle.hpp  io_paradigm.hpp  io_pre_created_handle_state.hpp  io_regular_file.hpp  location.hpp  location_group.hpp  mapping_table.hpp  marker.hpp  metric_class.hpp  metric_class_recorder.hpp  metric_instance.hpp  metric_member.hpp  parameter.hpp  pre_fwd.hpp  property.hpp  region.hpp  rma_win.hpp  source_code_location.hpp  string.hpp  system_tree_node.hpp  system_tree_node_domain.hpp  unknown.hpp
include/reader/otf2xx/definition/detail/: attribute_impl.hpp  base.hpp  call_path_impl.hpp  call_path_parameter_impl.hpp  calling_context_impl.hpp  cart_coordinate_impl.hpp  cart_dimension_impl.hpp  cart_topology_impl.hpp  comm_impl.hpp  group_impl.hpp  inter_comm_impl.hpp  interrupt_generator_impl.hpp  io_file_impl.hpp  io_handle_impl.hpp  io_paradigm_impl.hpp  io_pre_created_handle_state_impl.hpp  location_group_impl.hpp  location_impl.hpp  mapping_table_impl.hpp  marker_impl.hpp  metric_class_impl.hpp  metric_class_recorder_impl.hpp  metric_instance_impl.hpp  metric_member_impl.hpp  parameter_impl.hpp  property_impl.hpp  ref_counted.hpp  referable_base.hpp  region_impl.hpp  rma_win_impl.hpp  source_code_location_impl.hpp  string_impl.hpp  system_tree_node_domain_impl.hpp  system_tree_node_impl.hpp  weak_ref.hpp
include/reader/otf2xx/event/: base.hpp  buffer.hpp  buffer_flush.hpp  calling_context_enter.hpp  calling_context_leave.hpp  calling_context_sample.hpp  comm_create.hpp  comm_destroy.hpp  enter.hpp  events.hpp  fwd.hpp  io_acquire_lock.hpp  io_change_status_flag.hpp  io_create_handle.hpp  io_delete_file.hpp  io_destroy_handle.hpp  io_duplicate_handle.hpp  io_operation_begin.hpp  io_operation_cancelled.hpp  io_operation_complete.hpp  io_operation_issued.hpp  io_operation_test.hpp  io_release_lock.hpp  io_seek.hpp  io_try_lock.hpp  leave.hpp  marker.hpp  measurement.hpp  metric.hpp  mpi_collective_begin.hpp  mpi_collective_end.hpp  mpi_ireceive.hpp  mpi_ireceive_request.hpp  mpi_isend.hpp  mpi_isend_complete.hpp  mpi_receive.hpp  mpi_request_cancelled.hpp  mpi_request_test.hpp  mpi_send.hpp  non_blocking_collective_complete.hpp  (+38 more)
include/reader/otf2xx/event/detail/: metric_values.hpp  value_proxy.hpp
include/reader/otf2xx/reader/: callback.hpp  callback_funcs.hpp  fwd.hpp  reader.hpp  util.hpp
include/reader/otf2xx/tmp/: algorithm.hpp  runtime.hpp  typelist.hpp
include/reader/otf2xx/traits/: definition.hpp  event.hpp  reference.hpp  traits.hpp  tuple_meta.hpp
include/reader/otf2xx/writer/: archive.hpp  fwd.hpp  global.hpp  local.hpp
otfprofile/: AUTHORS  Makefile.am  acinclude.m4  bootstrap  configure.ac
otfprofile/config/: otf_get_version.sh
otfprofile/config/m4/: acinclude.circos.m4  acinclude.cube.m4  acinclude.otf.m4  acinclude.otf2.m4  libtool.m4
otfprofile/otfprofile/: Makefile.common  OTF2Reader.cpp  OTF2Reader.h  OTFReader.cpp  OTFReader.h  callpathtree.h  circos_fix.cpp  circos_fix.h  clustering.cpp  collect_data.cpp  comparison_clinkage.cpp  comparison_kmeans.cpp  create_circos.cpp  create_circos.h  create_csv.cpp  create_cube.cpp  create_cube.h  create_latex.cpp  datamap_reduce.cpp  datamap_reduce.h  datastructs.h  otfprofile.cpp  summarize_data.cpp  tracereader.cpp  tracereader.h  tracereaderfactory.cpp  tracereaderfactory.h
otfprofile/otfprofile/CircosLayouts/layouts/: IDrawable.hpp  ILayout.hpp  P2PCommLayout.hpp  circosCommon.hpp
otfprofile/otfprofile/CircosLayouts/layouts/links/: IHierarchicalLink.hpp  ILink.hpp  P2PMessageCountLinks.hpp  P2PMessageVolLinks.hpp
otfprofile/otfprofile/CircosLayouts/layouts/plots/: FunctionsGroupsHistogramPlot.hpp  IHeatPlot.hpp  IPlot.hpp  IScatterPlot.hpp  P2PMPIRuntimePlot.hpp  P2PMessageSizesPlot.hpp  P2PMessageVolumePlot.hpp
otfprofile/otfprofile/mpi/: Makefile.am  reduce_data.cpp
otfprofile/tests/: Makefile.am
otfprofile/tests/progress/: gnuplot.sh
otfprofile/tests/replay/: Makefile  generate_replay_example.cpp  handler.cpp  handler.h  modificationManager.cpp  modificationManager.h  mpi-comm.c  otfGenerator.cpp  otfGenerator.h  otfListWrapper.cpp  otfListWrapper.h  otfMap.cpp  otfMap.h  otfStrip.cpp  replay.cpp  replayBufferHandler.cpp  replayBufferHandler.h  replayExample.c  replayExceptions.h  replayHandler.cpp  replayHandler.h  replayLogger.cpp  replayLogger.h  replayTimer.cpp  replayTimer.h
schemas/: ApplicationProfile.schema.json
src/: data_tree.cpp  definitions.cpp  otf-profiler.cpp  reduce_data.cpp
src/output/: create_csv.cpp  create_cube.cpp  create_dot.cpp  create_json.cpp  create_json_io.cpp  data_out.cpp  dot_writer.cpp
src/reader/: CMakeLists.txt  OTF2Reader.cpp  OTFReader.cpp  jsonreader.cpp  tracereader.cpp
