SUBDIRS = \
	hello \
	generic_streams \
	generic_streams-mpi \
	progress \
	read_from_buffer
	
EXTRA_DIST= \
	read_from_buffer/hello_world.0.def--missing \
	read_from_buffer/hello_world.0.marker \
	read_from_buffer/hello_world.1.events \
	read_from_buffer/hello_world.2.events \
	read_from_buffer/hello_world.otf
